[package]
name = "tricoder-async"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
clap = { version="4.5.15", features = ["derive", "cargo"] }
clap_derive = "4.5.13"
env_logger = "0.11.5"
futures = "0.3.30"
hickory-resolver = "0.24.1"
log = "0.4.22"
regex = "1.10.6"
reqwest = {version="0.12.5", features=['json']}
serde = {version="1.0.207", features=['derive']}
thiserror = "1.0.63"
tokio = {version="1.39.2", features=['full']}
tokio-stream = "0.1.15"
url = "2.5.2"

